# access-risk-analyzer

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt  risk_report.csv
access_risk_analyzer/: __init__.py  attack_paths.py  data_generator.py  graph_builder.py  least_privilege.py  main.py  models.py  privesc_rules.py  risk_report.py  visualize.py
tests/: test_smoke.py
